# 2026.06----

./: README.md  environment.yml  pyproject.toml  requirements.txt  run_on_server.sh
configs/: experiment.yaml
results/: act_config.json  checkpoint_l1.csv  metrics.csv  metrics.json  per_dim_l1.csv  per_horizon_l1.csv  train_metrics_abc.csv  train_metrics_b.csv
results/checkpoint_metrics/: step_020000.json  step_040000.json  step_060000.json  step_080000.json
scripts/: bootstrap_autodl.sh  evaluate_checkpoints.sh  run_full_experiment.sh
task2_act/: __init__.py  calvin_io.py  constants.py  download_ta_dataset.py  evaluate_action_l1.py  make_mock_calvin.py  metrics.py  plots.py  prepare_datasets.py  ta_lerobot_v21.py  train_act.py
tests/: test_calvin_io.py  test_metrics.py  test_ta_lerobot_v21.py
