[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-hw3-task2-act"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pillow",
  "tqdm",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["task2_act*"]
